--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html>
     <!--The name on the tab-->
     <head>
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QZG8YCEYWT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QZG8YCEYWT');
+</script>
         <title>Home Page of Mario Brothers</title>
         <link rel="stylesheet" href="mycss2.css">
         <style>
